--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>A</span>
     </div>
     <div class="description">
-        <span>Maafin aku ya Nimas :(</span>
+        <span>Maafin aku ya Nimas :( ilove you 3000</span>
     </div>
     <div class="button">
         <button>
